examples/invalid/syntaxErr/if/ifNofi.wacc
# if missing closing fi
# Output:
# #syntax error#

#Program:#

begin
  if true 
  then
    skip
  else
    skip
end
